# conan-compile-definition-propagation-test

./: CMakeLists.txt  conanfile.py
include/: cpt.h
src/: cpt.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
